--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -47,7 +47,7 @@ separator_block_width= 10
 #signal=10
 
 [mediaplayer]
-label=♪
+label=
 command=/usr/lib/i3blocks/mediaplayer
 color=#c0c5ce
 interval=1
@@ -114,13 +114,6 @@ command=[[ -z "$(iwgetid -r)" ]] || echo "$(iwgetid -r) "
 color=#c0c5ce
 interval=2
 
-
-#[cpu_usage]
-#label=
-#interval=10
-#color=#d9d9d9
-
-
 # Battery indicator
 #[battery]
 #label=⚡
@@ -133,8 +126,6 @@ command=~/.config/i3/battery.py
 markup=pango
 interval=30
 color=#c0c5ce
-
-
 
 [volume]
 label=
