More cohesive update

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -47,11 +47,11 @@ separator_block_width= 10
 #signal=10
 
 [mediaplayer]
-label=♪
+label=
 command=/usr/lib/i3blocks/mediaplayer
+color=#c0c5ce
 interval=1
 signal=10
-color=#d9d9d9
 
 #[playerctl]
 #label=♪
@@ -84,7 +84,7 @@ color=#d9d9d9
 label=:
 command=/usr/lib/i3blocks/disk $HOME
 interval=30
-color=#d9d9d9
+color=#c0c5ce
 
 
 # Network interface monitoring
@@ -103,7 +103,7 @@ color=#d9d9d9
 label=
 command=echo "$(sensors coretemp-isa-0000 | awk '/Physical/ {print $4}')"
 interval=10
-color=#ffffff
+color=#c0c5ce
 
 [wireless]
 #label=
@@ -111,15 +111,8 @@ color=#ffffff
 label=  
 command=[[ -z "$(iwgetid -r)" ]] || echo "$(iwgetid -r) "
 #color=#d33682
-color=#d9d9d9
+color=#c0c5ce
 interval=2
-
-
-#[cpu_usage]
-#label=
-#interval=10
-#color=#d9d9d9
-
 
 # Battery indicator
 #[battery]
@@ -132,9 +125,7 @@ interval=2
 command=~/.config/i3/battery.py
 markup=pango
 interval=30
-color=#d9d9d9
-
-
+color=#c0c5ce
 
 [volume]
 label=
@@ -144,12 +135,12 @@ interval=1
 instance=Master
 signal=10
 #color=#d70a53
-color=#d9d9d9
+color=#c0c5ce
 
 [Weather]
 command=~/.config/i3/IconicWeather.sh "73071"
 interval=1800
-color=#ffffff
+color=#c0c5ce
 
 # Date Time
 
@@ -159,5 +150,5 @@ label=
 command=date '+%a %m-%d-%y %l:%M:%S %p'
 interval=5
 #color=#50C878
-color=#d9d9d9
+color=#c0c5ce
 separator_block_width=0
