--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,7 +13,8 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8, FontAwesome 8
+font pango:source code pro 10
+#font pango: monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -44,10 +45,10 @@ bindsym $mod+d exec rofi -show run -display-run #i3-dmenu-desktop
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+#bindsym $mod+j focus left
+#bindsym $mod+k focus down
+#bindsym $mod+l focus up
+#bindsym $mod+semicolon focus right
 
 # alternatively, you can use the cursor keys:
 #bindsym $mod+Left focus left
@@ -99,23 +100,24 @@ bindsym $mod+Up exec xcalib -c
 bindsym $mod+Down exec xcalib -co 95 -a
 
 # Colors from Xresources
-set_from_resource $bg  i3wm.color0  #f0f0f0
-set_from_resource $fg  i3wm.color15 #f0f0f0
-set_from_resource $bg2 i3wm.color4  #f0f0f0
-set_from_resource $fg2 i3wm.color7  #f0f0f0
-set_from_resource $bg3 i3wm.color3  #f0f0f0
-set_from_resource $bg4 i3wm.color1  #f0f0f0
+set_from_resource $bg  color0  #f0f0f0
+set_from_resource $fg  color2  #f0f0f0
+set_from_resource $bg2 color4  #f0f0f0
+set_from_resource $fg2 color4  #f0f0f0
+set_from_resource $bg3 color2  #f0f0f0
+set_from_resource $bg4 color6  #f0f0f0
+set_from_resource $fg3 color7  #f0f0f0
 
 # class                 border  backgr. text indicator child_border
-client.focused          $bg      $bg    $fg  $bg   $bg
-client.focused_inactive $bg      $bg    $fg  $bg   $bg
-client.unfocused        $bg      $bg    $fg  $bg   $bg
-client.urgent           $bg      $bg    $fg  $bg   $bg
-client.placeholder      $bg      $bg    $fg  $bg   $bg
-client.background       $bg
+client.focused          $fg3     $bg    $fg  $bg   $fg3
+client.focused_inactive $fg3      $bg    $fg  $bg   $bg
+client.unfocused        $fg3      $bg    $fg  $bg   $bg
+client.urgent           $fg3      $bg    $fg  $bg   $bg
+client.placeholder      $fg3      $bg    $fg  $bg   $bg
+client.background       $fg3
 
 bar {
-	font pango:Monospace 8
+	font pango: source code pro 9 
         i3bar_command i3bar -t
 	
 	tray_output none
@@ -128,13 +130,13 @@ bar {
 
 	colors {
 	        background $bg
-		statusline $fg
+		statusline $fg3
 		separator $bg
 		
                 # class            border  backgr.  text
                 focused_workspace  $bg2    $bg2     $bg
-                active_workspace   $bg     $bg      $fg
-                inactive_workspace $bg     $bg      $fg
+                active_workspace   $bg     $bg      $fg3
+                inactive_workspace $bg     $bg      $fg3
                 urgent_workspace   $bg4    $bg4     $bg
 	}
 }
@@ -142,8 +144,9 @@ set $ws1 "1: &#xf120;"
 set $ws2 "2: &#xf268;"
 set $ws3 "3: &#xf0c0;"
 set $ws4 "4: &#xf121;"
-set $ws8 "8: &#xf008;"
-set $ws9 "9: &#xf001;"
+set $ws7 "7: &#xf0e0;"
+set $ws8 "8: &#xf26c;"
+set $ws9 "9: &#xf1bc;"
 
 
 # switch to workspace
@@ -153,7 +156,7 @@ bindsym $mod+3 workspace $ws3
 bindsym $mod+4 workspace $ws4
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
+bindsym $mod+7 workspace $ws7
 bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace 10
@@ -165,7 +168,7 @@ bindsym $mod+Shift+3 move container to workspace $ws3
 bindsym $mod+Shift+4 move container to workspace $ws4
 bindsym $mod+Shift+5 move container to workspace 5
 bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
+bindsym $mod+Shift+7 move container to workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace 10
@@ -232,12 +235,22 @@ bindsym --release Print exec scrot -u -s '%Y%m%d_%H%M%S.pang' -e 'mv $f ~/pictur
 bindsym $mod+p --release exec scrot -s '%Y%m%d_%H%M%S.png' -e 'mv $f ~/pictures/screenshots/'
 bindsym $mod+o+p -r-release exec scrot '%Y%m%d_%H%M%S.png' -e 'mv $f ~/pictures/screenshots/'
 
+bindsym $mod+l exec lock -p -- scrot -z 
+
+bindsym $mod+shift+x exec ~/aur_stuff/lock.sh --lock dimblur
+
 #exec --no-startup-id nm-applet
 #exec --no-startup-id slack
 #exec --no-startup-id blueman-applet
 exec --no-startup-id ~/.dropbox-dist/dropboxd
-exec --no-startup-id feh --bg-fill ~/pictures/wallpapers/minimal-mountains-by-freshpie-wallpaper.jpg
-exec --no-startup-id compton -cCGfF -b -i 0.85 --vsync opengl
-exec --no-startup-id wal -R
+exec --no-startup-id feh --bg-fill ~/pictures/wallpapers/cozy_mountains.jpg
+exec --no-startup-id dunst
+exec --no-startup-id ~/aur_stuff/lock.sh -U ~/pictures/wallpapers/cozy_mountains.jpg
+exec --no-startup-id ~/applications/oomox/oomoxify/oomoxify.sh 
+exec --no-startup-id ~/applications/oomox/colors/Base-16/Ocean-Alex
+exec ~/aur_stuff/lock.sh -u ~/pictures/wallpapers/cozy_mountains.jpg
+
+#exec --no-startup-id compton -cCGfF -b -i 0.85 --vsync opengl
+#exec --no-startup-id wal -R
 #exec_always --no-startup-id polybar -c ~/.config/polybar/config laptop -r
 exec --no-startup-id xrandr --output HDMI-1 --auto --left-of eDP-1
