--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -138,7 +138,7 @@ signal=10
 color=#c0c5ce
 
 [Weather]
-command=~/.config/i3/IconicWeather.sh <location-code>
+command=~/.config/i3/IconicWeather.sh "73071"
 interval=1800
 color=#c0c5ce
 
