Large setup update

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,16 +13,16 @@ bind-key -n S-Left previous-window
 bind-key -n S-Right next-window
 set-option -g status-fg white
 set-option -g status-bg default
-set-option -g status-attr default
-set-window-option -g window-status-fg "#666666"
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr default
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr default
-set-option -g message-fg white
-set-option -g message-bg black
-set-option -g message-attr bright
+#set-option -g status-attr default
+#set-window-option -g window-status-fg "#666666"
+#set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr default
+#set-window-option -g window-status-current-fg white
+#set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr default
+#set-option -g message-fg white
+#set-option -g message-bg black
+#set-option -g message-attr bright
 set -g status-left " "
 set -g status-justify left
 setw -g window-status-format         ' #(echo "#{pane_current_command}") '
